crates/domain/tests/violations/domain_imports_ckeletin.stderr
error[E0433]: cannot find module or crate `ckeletin` in this scope
 --> tests/violations/domain_imports_ckeletin.rs:6:5
  |
6 | use ckeletin::config::Config;
  |     ^^^^^^^^ use of unresolved module or unlinked crate `ckeletin`
  |
  = help: if you wanted to use a crate named `ckeletin`, use `cargo add ckeletin` to add it to your `Cargo.toml`
